# poasta

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  Wavefront Visualizations.ipynb  two_piece_gap_affine_design.md  two_piece_gap_affine_math.tex
contrib/poasta_plot/: poasta_plot.py
contrib/poasta_tools/: poasta_extract_genes.py  poasta_gene_dataset.py  poasta_graphviz_region.py  poasta_make_dataset.py  poasta_plot.py
data/amphora_genes/dnaG/set1/: meta.toml
data/amphora_genes/dnaG/set2/: meta.toml
data/amphora_genes/dnaG/set3/: meta.toml
data/amphora_genes/dnaG/set4/: meta.toml
data/amphora_genes/dnaG/set5/: meta.toml
data/amphora_genes/dnaG/set6/: meta.toml
poasta/: Cargo.toml
poasta/src/: debug.rs  errors.rs  lib.rs
poasta/src/aligner/: extension.rs  fr_points.rs  mod.rs  traits.rs  utils.rs
poasta/src/aligner/astar/: heuristic.rs  mod.rs  queue.rs
poasta/src/aligner/cost_models/: affine.rs  mod.rs
poasta/src/graph/: alignment.rs  io.rs  mock.rs  mod.rs  poa.rs  traits.rs  utils.rs
poasta/src/graph/bubbles/: finder.rs  index.rs  mod.rs
poasta/src/graph/io/: dot.rs  fasta.rs  mod.rs
poasta/src/io/: fasta.rs  graph.rs  mod.rs
poasta_bin/: Cargo.toml
poasta_bin/src/: cli.rs  main.rs
poasta_bin/src/debug_tracing/: filter.rs  mod.rs  subscriber.rs
src/: alignment.rs  debug.rs  errors.rs  graph.rs  lib.rs  main.rs  wavefront.rs
src/aligner/: alignment.rs  aln_graph.rs  astar.rs  config.rs  dfa.rs  extend.rs  extension.rs  fr_points.rs  heuristic.rs  layers.rs  mod.rs  offsets.rs  queue.rs  state.rs  utils.rs  visited.rs
src/aligner/astar/: heuristic.rs  mod.rs  queue.rs
src/aligner/cost_models/: affine.rs  mod.rs
src/aligner/scoring/: gap_affine.rs  gap_affine_2piece.rs  gap_linear.rs  mod.rs
src/aligner/visited/: interval_tree.rs  intervals.rs  merging.rs  mod.rs  transformations.rs
src/bubbles/: finder.rs  index.rs  mod.rs  node_map.rs  reached.rs
src/graph/: alignment.rs  io.rs  mod.rs  poa.rs
src/graph/bubbles/: finder.rs  index.rs  mod.rs  reached.rs
src/graphs/: mock.rs  mod.rs  poa.rs  tools.rs
src/io/: fasta.rs  gaf.rs  gfa.rs  graph.rs  mod.rs  state_tree.rs
src/wavefront/: aligner.rs  extend.rs  fr_points.rs  mod.rs  offsets.rs
src/wavefront/compute/: gap_affine.rs  mod.rs
tests/: small_test.fa  small_test.input.fa  small_test.query.fa  small_test.truth.fa  small_test2.fa  small_test3.fa  small_test4.fa  small_test5.fa  test.gfa  test2_from_abpoa.truth.fa  test2_half.msa.fa  test_from_abpoa.truth.fa  test_lasagna.fasta  test_presentation.fasta
