[package]
name = "poasta"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = "thin"

[dependencies]
ahash = { version = "0.8.3" }
anyhow = "1.0.71"
bincode = "1.3.3"
clap = { version = "4.3", features = ["derive"] }
crossbeam-channel = "0.5.15"
flate2 = "1.0.26"
itertools = "0.13.0"
nonmax = "0.5.5"
noodles = { version = "0.85", features = ["fasta", "fastq"] }
num = { version = "0.4" }
petgraph = { version = "~0.6", features = ["serde-1"] }
rustc-hash = "1.1.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "1.0.99", features = ["std"] }
smallvec = { version ="1.11.0", features =  ["const_generics", "union", "serde"] }
