[package]
name = "poasta"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }

[dependencies]
fixedbitset = "0.5.7"
flate2 = "1.0.34"
num = { version = "~0.4" }
petgraph = { version = "~0.6", features = ["serde-1"] }
rustc-hash = "~2.0.0"
tracing = { version = "0.1.40" }

[dev-dependencies]
noodles = { version = "~0.83", features = ["fasta", "fastq"] }

[features]
default = ["optimize_logging"]
optimize_logging = ["tracing/release_max_level_info"]
